Mejora de estilo y paginas faltantes

--- a/GoodPlant/descuentos.html
+++ b/GoodPlant/descuentos.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Descuentos</title>
+</head>
+<body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
         <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -37,7 +46,7 @@
             <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalFundacion">Unete a la Fundacion</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalContacto"> Contacto</a>
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalContacto2"> Contacto</a>
         </li>
       </ul>
     </div>
@@ -50,34 +59,34 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/macetaGood.jpg" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h4 class="card-title">Maceta Good</h4>
-                        <p class="card-text">$8.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h4 class="card-title">Codigo Descuento</h4>
+                        <p class="card-text">5 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/pala.png" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h4 class="card-title">Pala Jardin</h4>
-                        <p class="card-text">$10.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h4 class="card-title">Codigo Descuento</h4>
+                        <p class="card-text">10 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/TierraHojas.jpg" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h5 class="card-title">Tierra De Hojas</h5>
-                        <p class="card-text">$8.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h5 class="card-title">Codigo Descuento</h5>
+                        <p class="card-text">20 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
@@ -85,34 +94,34 @@
                 <div class="row mt-3 mb-3">
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/insecticida.jpg" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h4 class="card-title">Insecticida</h4>
-                        <p class="card-text">$7.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h4 class="card-title">Codigo Descuento</h4>
+                        <p class="card-text">30 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/packSemillas.jpg" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h4 class="card-title">Pack de semillas</h4>
-                        <p class="card-text">$10.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h4 class="card-title">Codigo Descuento</h4>
+                        <p class="card-text">40 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/regadera.png" alt="Card image">
+                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
-                        <h4 class="card-title">Regadera</h4>
-                        <p class="card-text">$5.000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                        <a href="#" class="btn btn-primary mt-3">Aplicar Descuento</a>
+                        <h4 class="card-title">Codigo Descuento</h4>
+                        <p class="card-text">50 %</p>
+                        <a href="#" class="btn btn-primary">Canjear</a>
+                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
                       </div>
                     </div>
                   </div>
@@ -134,7 +143,6 @@
           <h4 class="modal-title">Contacto</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
@@ -151,7 +159,7 @@
       </div>
     </div>
   </div>
-      <!-- The Modal -->
+        <!-- The Modal -->
 <div class="modal" id="ModalFundacion">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -209,5 +217,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 </body>
 </html>
