--- a/GoodPlant/despacho.html
+++ b/GoodPlant/despacho.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despacho</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/GoodPlant/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#">Codigos de descuento</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Unete a la Fundacion</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalFundacion">Unete a la Fundacion</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalContacto2"> Contacto</a>
@@ -43,7 +43,7 @@
             <div class="col-sm-2 bg-success text-white" style="min-height: 80vh;">
                 <div class="row perfil">
                     <div class="col-sm-12 mt-4 d-flex justify-content-center">
-                        <img  class ="avatar" src="/img/foto_perfil.jpg" alt="" width="100px">
+                        <img  class ="avatar" src="/GoodPlant/img/DefaultUser.png" alt="" width="100px">
                     </div>
                     <div class="col-sm-12 mt-4 d-flex justify-content-center">
                             <p>Bienvenido JBtesla</p>
@@ -72,31 +72,10 @@
             <div class="col-sm-10">
                 <div class="row">
                     <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card bg-warning mt-3">
-                              <h4 class="card-title">Alumnos</h4>
-                              <p class="card-text">Inscritos: 298</p>
-                              <a href="#" class="btn btn-danger">Revisar</a>
-                            </div>
-                          </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card bg-success mt-3">
-                              <h4 class="card-title">Notas</h4>
-                              <p class="card-text">Inscritos: 1000</p>
-                              <a href="#" class="btn btn-danger">Revisar</a>
-                            </div>
-                          </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card bg-danger mt-3">
-                              <h4 class="card-title">Examenes</h4>
-                              <p class="card-text">Inscritos: 0</p>
-                              <a href="#" class="btn btn-danger">Revisar</a>
-                            </div>
-                          </div>
                     </div>
                 </div>
                 <div class="row">
@@ -130,13 +109,63 @@
       </div>
     </div>
   </div>
+        <!-- The Modal -->
+<div class="modal" id="ModalFundacion">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Unete a la Fundacion</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body mt-3">
+          <div>
+            <div style="text-align: center;">
+              <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+              <form action="perfilUsuario.html" method="get">
+            </div>
+                  <div class="form-group">
+                      <label for="txtUser">Nombre</label>
+                      <input type="text" placeholder="Ingrese Nombre" class="form-control" name="txtName" id="txtName">
+                  </div>
+                  <div>
+                    <label for="txtAppaterno">Apellido paterno</label>
+                    <input type="text" placeholder="Ingrese apellido paterno" class="form-control" name="txtAppaterno" id="txtAppaterno">
+                </div>
+                <div>
+                  <label for="txtApmaterno">Apellido materno</label>
+                  <input type="text" placeholder="Ingrese apellido materno" class="form-control" name="txtApmaterno" id="txtApmaterno">
+              </div>
+                  <div>
+                      <label for="txtEmail">Correo Electronico</label>
+                      <input type="text" placeholder="Ingresa tu correo" class="form-control" name="txtEmail" id="txtEmail">
+                  </div>
+                  <div>
+                    <label for="txtNumcon">Numero Contacto</label>
+                    <input type="text" placeholder="Ingrese numero contacto" class="form-control" name="txtNumcon" id="txtNumcon">
+                </div>
+                  <div style="text-align: center;">
+                      <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
+                      <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
+                  </div>
+              </form>
+          </div>
+      </div>
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     <div class="p-5 bg-dark text-white">
         <div class="d-flex justify-content-between align-items-center">
         </div>
     </div>
         <!-- jslibrary -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
