--- a/GoodPlant/index.html
+++ b/GoodPlant/index.html
@@ -16,7 +16,7 @@
     <title>Index</title>
         <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/GoodPlant/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
@@ -86,10 +86,9 @@
                         <label for="txtPass">Contraseña</label>
                         <input type="password" placeholder="Ingrese Contraseña" class="form-control" name="txtPass" id="txtPass">
                     </div>
-
                     <div>
-                        <input type="submit"  class="btn btn-success" name="btnEnviar" id="btnEnviar">
-                        <input type="reset" class="btn btn-danger" name="btnLimpiar" id="btnLimpiar">
+                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
+                        <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
                     </div>
             
                 </form>
@@ -112,7 +111,7 @@
           <h4 class="modal-title">Contacto</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-  
+
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
