--- a/GoodPlant/historialCompras.html
+++ b/GoodPlant/historialCompras.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
         <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
         <a class="navbar-brand" href="#">GoodPlant</a>
@@ -262,10 +262,37 @@
     </div>
   </div>
 </div>
-    <div class="p-5 bg-dark text-white">
-        <div class="d-flex justify-content-between align-items-center">
-        </div>
-    </div>
+<footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+    <a class="text-white" href="#">Good_Plant_Store</a>
+  </div>
+  <!-- Copyright -->
+</footer>
         <!-- jslibrary -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
