--- a/GoodPlant/index.html
+++ b/GoodPlant/index.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
         <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
         <a class="navbar-brand" href="#">GoodPlant</a>
@@ -50,17 +50,47 @@
       </nav>
     <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-2" style="min-height: 80vh;">
+          <div class="col-sm-3" style="min-height: 80vh;">
             </div>
-            <div class="col-sm-8 flex-column mt-3 text-center">
-              <img src="/GoodPlant/img/plantasPrueba.jpg" alt="" width="500px">
-              <h1>Bienvenido a nuestra tienda</h1>
-              <div class="text text-center">
-                <p>Nuestra tienda tiene una alta gama de productos para cuidado de jardin y plantas en general registrate ahora y revisa nuestro catalogo</p>
+            <div class="col-sm-6 flex-column mt-3 text-center">
+              <div>
+                <h1>! Bienvenido a nuestra tienda online ¡</h1>
               </div>
-              <p></p>
+              <div id="demo" class="carousel slide" data-ride="carousel">
+
+                <!-- Indicators -->
+                <ul class="carousel-indicators">
+                  <li data-target="#demo" data-slide-to="0" class="active"></li>
+                  <li data-target="#demo" data-slide-to="1"></li>
+                  <li data-target="#demo" data-slide-to="2"></li>
+                </ul>
+              
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/GoodPlant/img/plantasPrueba.jpg" alt="Macetas" width="800px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/GoodPlant/img/inicio2.png" alt="Jardin" width="800px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/GoodPlant/img/inicio4.jpg" alt="Plantas" width="800px" height="600px">
+                  </div>
+                </div>
+              
+                <!-- Left and right controls -->
+                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#demo" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
+              </div>
+              <div>
+                <h5>Nuestra tienda se especializa en productos de jardineria en general con despacho a domicilio, registrate para ver nuestro catalogo</h5>
+              </div>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-3">
             </div>
         </div>
     </div>
@@ -173,10 +203,37 @@
       </div>
     </div>
   </div>
-  <div class="p-5 bg-dark text-white">
-    <div class="d-flex justify-content-between align-items-center">
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+        <!-- Google -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-google"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
     </div>
-  </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+      <a class="text-white" href="#">Good_Plant_Store</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
         <!-- jslibrary -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
