correccion de dispocicion de la pagina 1.0

--- a/GoodPlant/despacho.html
+++ b/GoodPlant/despacho.html
@@ -40,7 +40,7 @@
       </nav>
       <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2 bg-success text-white" style="min-height: 80vh;">
+            <div class="col-sm-2 bg-success text-white">
                 <div class="row perfil">
                     <div class="col-sm-12 mt-4 d-flex justify-content-center">
                         <img  class ="avatar" src="/GoodPlant/img/DefaultUser.png" alt="" width="100px">
@@ -49,7 +49,7 @@
                             <p>Bienvenido JBtesla</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row-menu">
                     <div class="col-sm-12">
                         <ul class="nav nav-pills flex-column mt-3">
                             <li class="nav-item mt-1">
@@ -61,7 +61,9 @@
                             <li class="nav-item mt-1">
                               <a class="nav-link" href="despacho.html"><i class="fa fa-truck"></i> Seguimiento Despacho</a>
                             </li>
+                            <li>
                             <hr>
+                             </li>
                             <li class="nav-item mt-1">
                                 <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
                               </li>
@@ -73,12 +75,12 @@
                 <div class="row">
                     <div class="col-sm-2">
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                       <div class="titulo mt-3 mb-3 text-center">
                       <H1>Seguimiento de despacho</H1>
                     </div>
-                      <div class="row">
-                        <div class="col-sm-4">
+                        <div class="row">
+                          <div class="col-sm-4">
                           <img src="/GoodPlant/img/shoopingcart.png" alt="">
                           <img src="/GoodPlant/img/arrow.png" alt="">
                         </div>
@@ -91,6 +93,8 @@
                           <img src="/GoodPlant/img/success.png" alt="">
                         </div>
                       </div>
+                      </div>
+                    </div>
                       <div class="progress">
                         <div class="progress-bar" style="width:25%">25%</div>
                       </div>
@@ -125,8 +129,8 @@
                         </tbody>
                       </table>
                       <div style="text-align: center;">
-                        <input type="submit" value="Ver despacho" class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
-                        <input type="reset" value="Cancelar" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
+                        <input type="submit" value="Ver despacho" class="btn btn-success mt-3 mb-3" name="btnEnviar" id="btnEnviar">
+                        <input type="reset" value="Cancelar" class="btn btn-danger mt-3 mb-3" name="btnLimpiar" id="btnLimpiar">
                     </div>
                   </div>
                     <div class="col-sm-2">
@@ -217,7 +221,7 @@
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
-    <section class="mb-4">
+    <section class="mb-1">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
@@ -226,7 +230,6 @@
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-google"></i
       ></a>
-
       <!-- Instagram -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-instagram"></i
