--- a/GoodPlant/productos.html
+++ b/GoodPlant/productos.html
@@ -44,11 +44,11 @@
   </nav>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-2" style="min-height: 80vh;">
+          <div class="col-sm-2">
             </div>
             <div class="col-sm-8 flex-column mt-3 text-center">
                 <div class="row">
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/macetaGood.jpg" alt="Card image">
                       <div class="card-body">
@@ -59,7 +59,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/pala.png" alt="Card image">
                       <div class="card-body">
@@ -70,7 +70,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/TierraHojas.jpg" alt="Card image">
                       <div class="card-body">
@@ -94,7 +94,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/packSemillas.jpg" alt="Card image">
                       <div class="card-body">
@@ -105,7 +105,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/regadera.png" alt="Card image">
                       <div class="card-body">
@@ -205,7 +205,7 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <section class="mb-4">
+      <section class="mb-1">
         <!-- Facebook -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-facebook-f"></i
