--- a/GoodPlant/descuentos.html
+++ b/GoodPlant/descuentos.html
@@ -53,7 +53,7 @@
   </nav>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-2" style="min-height: 80vh;">
+          <div class="col-sm-2">
             </div>
             <div class="col-sm-8 flex-column mt-3 text-center">
                 <div class="row">
@@ -68,7 +68,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -103,7 +103,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -114,7 +114,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -213,7 +213,7 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <section class="mb-4">
+      <section class="mb-1">
         <!-- Facebook -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-facebook-f"></i
