--- a/GoodPlant/historialCompras.html
+++ b/GoodPlant/historialCompras.html
@@ -40,7 +40,7 @@
       </nav>
       <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2 bg-success text-white" style="min-height: 80vh;">
+            <div class="col-sm-2 bg-success text-white">
                 <div class="row perfil">
                     <div class="col-sm-12 mt-4 d-flex justify-content-center">
                         <img  class ="avatar" src="img/DefaultUser.png" alt="" width="100px">
@@ -49,7 +49,7 @@
                             <p>Bienvenido JBtesla</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row-menu">
                     <div class="col-sm-12">
                         <ul class="nav nav-pills flex-column mt-3">
                             <li class="nav-item mt-1">
@@ -61,7 +61,9 @@
                             <li class="nav-item mt-1">
                               <a class="nav-link" href="despacho.html"><i class="fa fa-truck"></i> Seguimiento Despacho</a>
                             </li>
-                            <hr>
+                            <li>
+                              <hr>
+                             </li>
                             <li class="nav-item mt-1">
                                 <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
                               </li>
@@ -266,7 +268,7 @@
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
-    <section class="mb-4">
+    <section class="mb-1">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
