--- a/GoodPlant/index.html
+++ b/GoodPlant/index.html
@@ -48,15 +48,15 @@
           </ul>
         </div>
       </nav>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
         <div class="row">
-          <div class="col-sm-3" style="min-height: 80vh;">
+          <div class="col-sm-3">
             </div>
             <div class="col-sm-6 flex-column mt-3 text-center">
               <div>
                 <h1>! Bienvenido a nuestra tienda online ¡</h1>
               </div>
-              <div id="demo" class="carousel slide" data-ride="carousel">
+              <div id="demo" class="carousel slide mt-3 mb-3" data-ride="carousel">
 
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
@@ -68,13 +68,13 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/GoodPlant/img/plantasPrueba.jpg" alt="Macetas" width="800px">
+                    <img src="/GoodPlant/img/plantasPrueba.jpg" alt="Macetas" width="500px" height="300px">
                   </div>
                   <div class="carousel-item">
-                    <img src="/GoodPlant/img/inicio2.png" alt="Jardin" width="800px">
+                    <img src="/GoodPlant/img/inicio2.png" alt="Jardin" width="500px" height="300px">
                   </div>
                   <div class="carousel-item">
-                    <img src="/GoodPlant/img/inicio4.jpg" alt="Plantas" width="800px" height="600px">
+                    <img src="/GoodPlant/img/inicio4.jpg" alt="Plantas" width="750px" height="300px">
                   </div>
                 </div>
               
@@ -86,7 +86,7 @@
                   <span class="carousel-control-next-icon"></span>
                 </a>
               </div>
-              <div>
+              <div class="parrafo mt-3">
                 <h5>Nuestra tienda se especializa en productos de jardineria en general con despacho a domicilio, registrate para ver nuestro catalogo</h5>
               </div>
             </div>
@@ -126,7 +126,7 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
@@ -189,8 +189,8 @@
                         <input type="password" placeholder="Reescriba la Contraseña" class="form-control" name="txtPass" id="txtPass">
                     </div>
                     <div>
-                        <input type="submit"  class="btn btn-success" name="btnEnviar" id="btnEnviar">
-                        <input type="reset" class="btn btn-danger" name="btnLimpiar" id="btnLimpiar">
+                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
+                        <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
                     </div>
             
                 </form>
@@ -198,7 +198,7 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
@@ -207,7 +207,7 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <section class="mb-4">
+      <section class="mb-1">
         <!-- Facebook -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-facebook-f"></i
