--- a/GoodPlant/perfilUsuario.html
+++ b/GoodPlant/perfilUsuario.html
@@ -40,7 +40,7 @@
       </nav>
       <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2 bg-success text-white" style="min-height: 80vh;">
+            <div class="col-sm-2 bg-success text-white">
                 <div class="row perfil">
                     <div class="col-sm-12 mt-4 d-flex justify-content-center">
                         <img  class ="avatar" src="/GoodPlant/img/DefaultUser.png" alt="" width="100px">
@@ -49,7 +49,7 @@
                             <p>Bienvenido JBtesla</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row-menu">
                     <div class="col-sm-12">
                         <ul class="nav nav-pills flex-column mt-3">
                             <li class="nav-item mt-1">
@@ -61,7 +61,9 @@
                             <li class="nav-item mt-1">
                               <a class="nav-link" href="despacho.html"><i class="fa fa-truck"></i> Seguimiento Despacho</a>
                             </li>
+                            <li>
                             <hr>
+                           </li>
                             <li class="nav-item mt-1">
                                 <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
                               </li>
@@ -71,12 +73,8 @@
                 </div>
             <div class="col-sm-10">
                 <div class="row">
-                    <div class="col-sm-2 mt-3">
-                    </div>
-                    <div class="col-sm-8 mt-3 flex-column">
-                      <div class="row">
-                        <div class="col-sm-4 flex-column">
-                        <div class="card mt-3" style="width:300px">
+                        <div class="col-sm-4">
+                        <div class="card mt-3" style="width:250px">
                           <img class="card-img-top" src="img/DefaultUser.png" alt="Card image">
                           <div class="card-body">
                             <h4 class="card-title">JBtesla</h4>
@@ -86,7 +84,8 @@
                           </div>
                         </div>
                         </div>
-                        <div class="card mt-3" style="width:400px">
+                        <div class="col-sm-4">
+                        <div class="card mt-3" style="width:300px">
                           <img class="card-img-top" src="img/mapaDespacho2.jpg" alt="Card image">
                           <div class="card-body">
                             <h4 class="card-title">Direccion Despacho</h4>
@@ -96,7 +95,8 @@
                           </div>
                         </div>
                       </div>
-                        <div class="card mt-3" style="width:400px">
+                      <div class="col-sm-3 mb-3">
+                        <div class="card mt-3" style="width:250px">
                           <img class="card-img-top" src="img/MetodoPago.png" alt="Card image">
                           <div class="card-body">
                             <h4 class="card-title">Metodo de pago</h4>
@@ -105,19 +105,14 @@
                             <p class="card-text">Metodo Preferido: Tarjeta de Credito</p>
                           </div>
                         </div>
-                      </div>
-                      </div>
-                      </div>
-                      <div class="col-sm-2 mt-3">
-                      </div>
+                     </div>
                     </div>
+                  </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12"></div>
+                    <div class="col-sm-10"></div>
                 </div>
             </div>
-        </div>
-    </div>
     <!-- The Modal -->
   <div class="modal" id="ModalContacto2">
     <div class="modal-dialog">
@@ -138,7 +133,7 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
@@ -188,7 +183,7 @@
       </div>
       <!-- Modal footer -->
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
@@ -197,7 +192,7 @@
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
-    <section class="mb-4">
+    <section class="mb-1">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
