correccion de dispocicion de la pagina 2.0

--- a/GoodPlant/descuentos.html
+++ b/GoodPlant/descuentos.html
@@ -22,7 +22,9 @@
 <body>
   <nav class="navbar navbar-expand-md bg-info navbar-dark">
     <!-- Brand -->
+    <div class="imagenLogo">
     <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+    </div>
     <a class="navbar-brand" href="#">GoodPlant</a>
   
     <!-- Toggler/collapsibe Button -->
@@ -51,13 +53,13 @@
       </ul>
     </div>
   </nav>
-      <div class="container-fluid">
+      <div class="container-fluid bg-dark">
         <div class="row">
           <div class="col-sm-2">
             </div>
             <div class="col-sm-8 flex-column mt-3 text-center">
                 <div class="row">
-                  <div class="col-sm-4">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -91,8 +93,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="row mt-3 mb-3">
-                  <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
                       <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
@@ -209,7 +211,7 @@
       </div>
     </div>
   </div>
-  <footer class="bg-dark text-center text-white">
+  <footer class="text-center text-white" style="background-color: rgb(34, 31, 31);">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
@@ -244,7 +246,5 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
 </body>
 </html>
