--- a/GoodPlant/despacho.html
+++ b/GoodPlant/despacho.html
@@ -12,7 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
-        <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+        <div class="imagenLogo">
+          <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+        </div>
         <a class="navbar-brand" href="#">GoodPlant</a>
       
         <!-- Toggler/collapsibe Button -->
