--- a/GoodPlant/productos.html
+++ b/GoodPlant/productos.html
@@ -13,7 +13,9 @@
 <body>
   <nav class="navbar navbar-expand-md bg-info navbar-dark">
     <!-- Brand -->
-    <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+    <div class="imagenLogo">
+      <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+    </div>
     <a class="navbar-brand" href="#">GoodPlant</a>
   
     <!-- Toggler/collapsibe Button -->
@@ -42,7 +44,7 @@
       </ul>
     </div>
   </nav>
-      <div class="container-fluid">
+      <div class="container-fluid bg-dark">
         <div class="row">
           <div class="col-sm-2">
             </div>
@@ -201,7 +203,7 @@
       </div>
     </div>
   </div>
-  <footer class="bg-dark text-center text-white">
+  <footer class="text-center text-white" style="background-color: rgb(34, 31, 31);">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
