--- a/GoodPlant/index.html
+++ b/GoodPlant/index.html
@@ -22,7 +22,9 @@
 <body>
     <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
+        <div class="imagenLogo">
         <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+        </div>
         <a class="navbar-brand" href="#">GoodPlant</a>
       
         <!-- Toggler/collapsibe Button -->
@@ -52,7 +54,7 @@
         <div class="row">
           <div class="col-sm-3">
             </div>
-            <div class="col-sm-6 flex-column mt-3 text-center">
+            <div class="col-sm-6 flex-column mt-3 text-center" style="color: white;">
               <div>
                 <h1>! Bienvenido a nuestra tienda online ¡</h1>
               </div>
@@ -74,7 +76,7 @@
                     <img src="/GoodPlant/img/inicio2.png" alt="Jardin" width="500px" height="300px">
                   </div>
                   <div class="carousel-item">
-                    <img src="/GoodPlant/img/inicio4.jpg" alt="Plantas" width="750px" height="300px">
+                    <img src="/GoodPlant/img/jardineria-t.jpg" alt="Plantas" width="500px" height="300px">
                   </div>
                 </div>
               
@@ -86,7 +88,7 @@
                   <span class="carousel-control-next-icon"></span>
                 </a>
               </div>
-              <div class="parrafo mt-3">
+              <div class="parrafo mt-3" style="color: white;">
                 <h5>Nuestra tienda se especializa en productos de jardineria en general con despacho a domicilio, registrate para ver nuestro catalogo</h5>
               </div>
             </div>
@@ -203,7 +205,7 @@
       </div>
     </div>
   </div>
-  <footer class="bg-dark text-center text-white">
+  <footer class="text-center text-white" style="background-color: rgb(34, 31, 31);">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
