Fixeado imagenes en carpeta img

--- a/GoodPlant/index.html
+++ b/GoodPlant/index.html
@@ -16,14 +16,14 @@
     <title>Index</title>
         <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/GoodPlant/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
         <div class="imagenLogo">
-        <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+        <img src="img/logoGoodPlant.png" alt="" width="70px">
         </div>
         <a class="navbar-brand" href="#">GoodPlant</a>
       
@@ -70,13 +70,13 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/GoodPlant/img/plantasPrueba.jpg" alt="Macetas" width="500px" height="300px">
+                    <img src="img/plantasPrueba.jpg" alt="Macetas" width="500px" height="300px">
                   </div>
                   <div class="carousel-item">
-                    <img src="/GoodPlant/img/inicio2.png" alt="Jardin" width="500px" height="300px">
+                    <img src="img/inicio2.png" alt="Jardin" width="500px" height="300px">
                   </div>
                   <div class="carousel-item">
-                    <img src="/GoodPlant/img/jardineria-t.jpg" alt="Plantas" width="500px" height="300px">
+                    <img src="img/jardineria-t.jpg" alt="Plantas" width="500px" height="300px">
                   </div>
                 </div>
               
@@ -108,7 +108,7 @@
         <!-- Modal body -->
         <div class="modal-body">
             <div style="text-align: center;">
-                <img src="/GoodPlant/img/Login.png" alt="" width="50">
+                <img src="img/Login.png" alt="" width="50">
                 <form action="perfilUsuario.html" method="get">
                     <div class="form-group">
                         <label for="txtUser">Usuario</label>
@@ -147,7 +147,7 @@
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
-            <img src="/GoodPlant/img/Contacto.png" alt="" width="50px">
+            <img src="img/Contacto.png" alt="" width="50px">
         </div>
           <p><i class="fa-solid fa-square-phone"></i> Numero de Contacto: +5695453525</p>
           <p><i class="fa-brands fa-instagram"></i> Instagram: Good_Plant_Store</p>
@@ -172,7 +172,7 @@
         <!-- Modal body -->
         <div class="modal-body">
             <div style="text-align: center;">
-                <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+                <img src="img/registroUsuario.png" alt="" width="50">
                 <form action="perfilUsuario.html" method="get">
                     <div class="form-group">
                         <label for="txtUser">Crea Tu Usuario</label>
@@ -231,7 +231,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+      <img src="img/logoFooter.png" alt="" width="50px">
       <a class="text-white" href="#">Good_Plant_Store</a>
     </div>
     <!-- Copyright -->
