--- a/GoodPlant/descuentos.html
+++ b/GoodPlant/descuentos.html
@@ -16,14 +16,14 @@
     <title>Productos</title>
         <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/GoodPlant/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-info navbar-dark">
     <!-- Brand -->
     <div class="imagenLogo">
-    <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+    <img src="img/logoGoodPlant.png" alt="" width="70px">
     </div>
     <a class="navbar-brand" href="#">GoodPlant</a>
   
@@ -61,7 +61,7 @@
                 <div class="row">
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Codigo Descuento</h4>
                         <p class="card-text">5 %</p>
@@ -72,7 +72,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Codigo Descuento</h4>
                         <p class="card-text">10 %</p>
@@ -83,7 +83,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h5 class="card-title">Codigo Descuento</h5>
                         <p class="card-text">20 %</p>
@@ -96,7 +96,7 @@
                 <div class="row">
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Codigo Descuento</h4>
                         <p class="card-text">30 %</p>
@@ -107,7 +107,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Codigo Descuento</h4>
                         <p class="card-text">40 %</p>
@@ -118,7 +118,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/Porcentaje.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Codigo Descuento</h4>
                         <p class="card-text">50 %</p>
@@ -148,7 +148,7 @@
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
-            <img src="/GoodPlant/img/Contacto.png" alt="" width="50px">
+            <img src="img/Contacto.png" alt="" width="50px">
         </div>
           <p><i class="fa-solid fa-square-phone"></i> Numero de Contacto: +5695453525</p>
           <p><i class="fa-brands fa-instagram"></i> Instagram: Good_Plant_Store</p>
@@ -174,7 +174,7 @@
         <div class="modal-body mt-3">
             <div>
               <div style="text-align: center;">
-                <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+                <img src="img/registroUsuario.png" alt="" width="50">
                 <form action="perfilUsuario.html" method="get">
               </div>
                     <div class="form-group">
@@ -237,7 +237,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+      <img src="img/logoFooter.png" alt="" width="50px">
       <a class="text-white" href="#">Good_Plant_Store</a>
     </div>
     <!-- Copyright -->
