--- a/GoodPlant/historialCompras.html
+++ b/GoodPlant/historialCompras.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>historialCompras</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/GoodPlant/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-info navbar-dark">
         <!-- Brand -->
         <div class="imagenLogo">
-          <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+          <img src="img/logoGoodPlant.png" alt="" width="70px">
         </div>
         <a class="navbar-brand" href="#">GoodPlant</a>
       
@@ -131,7 +131,7 @@
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
-            <img src="/GoodPlant/img/Contacto.png" alt="" width="50px">
+            <img src="img/Contacto.png" alt="" width="50px">
         </div>
           <p><i class="fa-solid fa-square-phone"></i> Numero de Contacto: +5695453525</p>
           <p><i class="fa-brands fa-instagram"></i> Instagram: Good_Plant_Store</p>
@@ -158,7 +158,7 @@
           <!-- Modal body -->
           <div class="modal-body">
             <div style="text-align: center;">
-              <img src="/GoodPlant/img/Contacto.png" alt="" width="50px">
+              <img src="img/Contacto.png" alt="" width="50px">
           </div>
             <p><i class="fa-solid fa-square-phone"></i> Numero de Contacto: +5695453525</p>
             <p><i class="fa-brands fa-instagram"></i> Instagram: Good_Plant_Store</p>
@@ -183,7 +183,7 @@
           <!-- Modal body -->
           <div class="modal-body">
               <div style="text-align: center;">
-                  <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+                  <img src="img/registroUsuario.png" alt="" width="50">
                   <form action="perfilUsuario.html" method="get">
                       <div class="form-group">
                           <label for="txtUser">Crea Tu Usuario</label>
@@ -229,7 +229,7 @@
       <div class="modal-body mt-3">
           <div>
             <div style="text-align: center;">
-              <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+              <img src="img/registroUsuario.png" alt="" width="50">
               <form action="perfilUsuario.html" method="get">
             </div>
                   <div class="form-group">
@@ -292,7 +292,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright:
-    <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+    <img src="img/logoFooter.png" alt="" width="50px">
     <a class="text-white" href="#">Good_Plant_Store</a>
   </div>
   <!-- Copyright -->
