--- a/GoodPlant/productos.html
+++ b/GoodPlant/productos.html
@@ -7,14 +7,14 @@
     <title>Productos</title>
         <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/GoodPlant/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-info navbar-dark">
     <!-- Brand -->
     <div class="imagenLogo">
-      <img src="/GoodPlant/img/logoGoodPlant.png" alt="" width="70px">
+      <img src="img/logoGoodPlant.png" alt="" width="70px">
     </div>
     <a class="navbar-brand" href="#">GoodPlant</a>
   
@@ -52,7 +52,7 @@
                 <div class="row">
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/macetaGood.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/macetaGood.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Maceta Good</h4>
                         <p class="card-text">$8.000</p>
@@ -63,7 +63,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/pala.png" alt="Card image">
+                      <img class="card-img-top" src="img/pala.png" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Pala Jardin</h4>
                         <p class="card-text">$10.000</p>
@@ -74,7 +74,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/TierraHojas.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/TierraHojas.jpg" alt="Card image">
                       <div class="card-body">
                         <h5 class="card-title">Tierra De Hojas</h5>
                         <p class="card-text">$8.000</p>
@@ -87,7 +87,7 @@
                 <div class="row mt-3 mb-3">
                   <div class="col-sm-4">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/insecticida.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/insecticida.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Insecticida</h4>
                         <p class="card-text">$7.000</p>
@@ -98,7 +98,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/packSemillas.jpg" alt="Card image">
+                      <img class="card-img-top" src="img/packSemillas.jpg" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Pack de semillas</h4>
                         <p class="card-text">$10.000</p>
@@ -109,7 +109,7 @@
                   </div>
                   <div class="col-sm-4 mt-3 mb-3">
                     <div class="card" style="width:200px">
-                      <img class="card-img-top" src="/GoodPlant/img/regadera.png" alt="Card image">
+                      <img class="card-img-top" src="img/regadera.png" alt="Card image">
                       <div class="card-body">
                         <h4 class="card-title">Regadera</h4>
                         <p class="card-text">$5.000</p>
@@ -140,7 +140,7 @@
         <!-- Modal body -->
         <div class="modal-body">
           <div style="text-align: center;">
-            <img src="/GoodPlant/img/Contacto.png" alt="" width="50px">
+            <img src="img/Contacto.png" alt="" width="50px">
         </div>
           <p><i class="fa-solid fa-square-phone"></i> Numero de Contacto: +5695453525</p>
           <p><i class="fa-brands fa-instagram"></i> Instagram: Good_Plant_Store</p>
@@ -166,7 +166,7 @@
         <div class="modal-body mt-3">
             <div>
               <div style="text-align: center;">
-                <img src="/GoodPlant/img/registroUsuario.png" alt="" width="50">
+                <img src="img/registroUsuario.png" alt="" width="50">
                 <form action="perfilUsuario.html" method="get">
               </div>
                     <div class="form-group">
@@ -229,7 +229,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <img src="/GoodPlant/img/logoFooter.png" alt="" width="50px">
+      <img src="img/logoFooter.png" alt="" width="50px">
       <a class="text-white" href="#">Good_Plant_Store</a>
     </div>
     <!-- Copyright -->
